# health-recorder-ai

./: .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  app.py  config.py.example  deploy-systemd.sh  deploy-to-nas.sh  docker-compose.yml  markdown.py  plan.md  pyproject.toml  test_app.py  test_markdown.py
.claude/: settings.local.json
.github/workflows/: docker-build.yml
docs/: architecture.md  requirements.md
misc/: convert_health_records.py  health-recorder.service
static/: styles.css
templates/: chat.html  index.html
