[tool.poetry]
name = "health-recorder-ai"
version = "0.1.0"
description = "健康記録アプリ"
authors = ["yattom"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.3"
requests = "^2.32.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"